# kurumi

./: .clang-format  CONTRIBUTING.md  Cargo.toml  README.md  THIRD-PARTY.md  justfile
kurumi/: Cargo.toml  README.md
kurumi/include/: kurumi.h
kurumi/src/: capi.rs  lib.rs
kurumi/src/capi/: eval.rs  graph.rs  ops.rs  tensor.rs  tests.rs
kurumi/src/capi/ops/: nn.rs  (+9 more)
kurumi_core/: Cargo.toml  README.md
kurumi_core/benches/: forward.rs
kurumi_core/src/: backend.rs  dtype.rs  error.rs  grad.rs  graph.rs  interp.rs  layout.rs  lib.rs  lower.rs  quant.rs  realize.rs  rng.rs  tensor.rs
kurumi_core/src/backend/: tests.rs
kurumi_core/src/dtype/: convert.rs  dispatch.rs  traits.rs
kurumi_core/src/grad/: complex.rs  contract.rs  elementwise.rs  indexing.rs  linalg.rs  movement.rs  nn.rs  reduce.rs  tests.rs
kurumi_core/src/graph/: check.rs  infer.rs  inspect.rs  op.rs  ops.rs  pass.rs  serialize.rs
kurumi_core/src/interp/: complex.rs  contract.rs  elementwise.rs  indexing.rs  linalg.rs  movement.rs  nn.rs  random.rs  reduce.rs  sort.rs
kurumi_core/src/lower/: index.rs  sym.rs
kurumi_core/src/quant/: tests.rs
kurumi_core/src/realize/: eval.rs  expr.rs  fuzz.rs  plan.rs  sched.rs  tape.rs  tests.rs
kurumi_core/tests/: cpu_completeness.rs  dtype.rs  engine.rs  extended.rs  ops.rs
kurumi_core/tests/decomposed/: complex.rs  conv.rs  coverage.rs  einsum.rs  elementwise.rs  indexing.rs  linalg.rs  main.rs  movement.rs  rng.rs  signal.rs  special.rs
kurumi_core/tests/fixtures/: graph_v1.kgph  graph_v2.kgph
kurumi_metal/: Cargo.toml  README.md
kurumi_metal/src/: backend.rs  context.rs  dtype.rs  lib.rs  msl.rs  tests.rs
kurumi_metal/src/backend/: eval.rs  eval_walk.rs  fuse.rs  hostgemm.rs
kurumi_metal/src/context/: dispatch.rs  encoder.rs  pipeline.rs  pool.rs  profile.rs
kurumi_metal/src/msl/: cast.rs  complex.rs  generate.rs  hostgemm.rs  indexing.rs  linalg.rs  matmul.rs  nn.rs  pointwise.rs  quant.rs  reduce.rs
kurumi_metal/src/tests/: bench.rs  device_ops.rs  fuzz.rs  matmul.rs  model.rs
kurumi_metal/tests/: complex.rs  device.rs
(+115 files in other folders)
