[package]
name = "kurumi_core"
description = "kurumi engine core: IR and reference interpreter."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
float8 = "0.7.0"
half = "2.7.1"
num-complex = "0.4.6"

[target.'cfg(not(target_os = "macos"))'.dependencies]
gemm = "0.19.0"

[[bench]]
name = "forward"
harness = false
